# stellar-streams

./: .gitignore  .pre-commit-config.yaml  pyproject.toml  readme.md
.github/workflows/: python-tests.yml
notebooks/drafts/: Injection Testing New.ipynb  injection_testing_lab.ipynb  injection_testing_old.ipynb  power_fitting_lab clean.ipynb  power_fitting_lab.ipynb  power_spectrum_demo.ipynb  preprocessing.ipynb
notebooks/examples/: Power Fitting.ipynb
src/stellar_stream/: __init__.py  hybrid.py  stream.py
src/stellar_stream.egg-info/: PKG-INFO  SOURCES.txt  requires.txt  top_level.txt
tests/: test_stellar_stream.py
